# lime-qt6

./: CMakeLists.txt  EditorView.qml  Makefile  README.md  build.bat  build.sh  editorview.cpp  editorview.h  go.mod  main.cpp  main.go  main.qml  qtdeploy.conf  resources.qrc
assets/qml/: CommandPalette.qml  EditorView.qml  Minimap.qml  Sidebar.qml  StatusBar.qml  Style.qml  TabBar.qml  Theme.qml  main.qml
cmd/: main.go
internal/editor/: editor_item.go
